<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        android:textColor="@color/white"
        android:textSize="@dimen/text_header"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_game"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_card_view_height"
        android:layout_marginTop="@dimen/main_card_view_margin_top"
        android:layout_marginLeft="@dimen/main_card_view_margin_side"
        android:layout_marginRight="@dimen/main_card_view_margin_side"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin"
                    android:textSize="@dimen/text_header"
                    android:textStyle="bold">

                </TextView>

                <EditText
                    android:id="@+id/et_char_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:maxLength="1">
                </EditText>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_try"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_x_small"
                    android:text="@string/try_button_text">

                </androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_successful_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/successful_message"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                android:visibility="gone"
                android:gravity="center">

            </TextView>

            <TextView
                android:id="@+id/tv_fail_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/fail_message"
                android:textSize="@dimen/text_large"
                android:visibility="gone"
                android:gravity="center">

            </TextView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/rl_result_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_game"
        android:layout_marginStart="@dimen/result_button_margin_side"
        android:layout_marginTop="@dimen/result_button_margin_top"
        android:layout_marginEnd="@dimen/result_button_margin_side">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit">

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/play_again">

        </androidx.appcompat.widget.AppCompatButton>

    </RelativeLayout>



</RelativeLayout>